erro ao clicar na nav e ser direcionado para a sessao

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Portifólio</title>
+    <title>Portifólio Marcus Vincius</title>
 </head>
 <body>
     <header class="header-container">
@@ -25,38 +25,65 @@
                                 <a href="">Home</a>
                             </li>
                             <li>
-                                <a href="">Sobre</a>
+                                <a href="">About me</a>
                             </li>
                             <li>
-                                <a href="">Projetos</a>
+                                <a href="">Experiences</a>
+                            </li>
+                            <li>
+                                <a href="#projects">Projects</a>
+                            </li>
+                            <li>
+                                <a href="">Skills</a>
                             </li>
                         </ul>
                     </nav>
                 </div>
             </div>
         </div>
+        <h3><span class="botao">Hello</span> I'm</h3>
         <h1>Marcus Vinícius</h1>
         <h2>Full-Strack Devoloper</h2>
         <div class="social-media">
             <a href="https://www.linkedin.com/in/marcus-vin%C3%ADcius-267756219/" target="_blank">Linkedin</a>
             <a href="https://github.com/marcussviniciuss?tab=repositories" target="_blank">Github</a>
+            <a href="https://api.whatsapp.com/send/?phone=5511954405823" target="_blank">Contact Me</a>
         </div>
-    </header>
-    <main class="main-container">
-        <div class="card-container">
-            <div class="card">
-                <div class="card-wrapper">
-                    <h2>Projeto</h2>
-                    <p>Clique aqui!</p>
+                <!-- Seção About Me -->
+                <div class="about-me-container">
+                    <div class="about-me-card">
+                        <div class="card-wrapper">
+                            <h2>About Me</h2>
+                        </div>
+                    </div>
+                    <ul class="about-me-text">
+                        <li>Graduated in Systems Analysis and Development.</li>
+                        <li>Studying Software Engineering.</li>
+                        <li>1 year and 8 months of experience in Search Engine Optimization.</li>
+                        <li>English intermediate.</li>
+                    </ul>
                 </div>
-            </div>
+                <!-- Fim da Seção About Me -->
+    </header>
+    <main class="main-container center-container">
+        <div class="card-container" >
+            <a href="https://github.com/marcussviniciuss/sistema-soft-forge" target="_blank">
+                <div class="card">
+                    <div class="card-wrapper" id="projects">
+                        <h2>Hotel Management System</h2>
+                        <p>Clique aqui!</p>
+                        
+                    </div>
+                </div>
+            </a>
             <div class="card-text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore similique temporibus repellendus ea corrupti, ipsam placeat officiis? Veritatis ratione animi quis quo similique. Alias, ullam eos. Deserunt libero maxime omnis.
+                Este projeto é um Sistema de Gerenciamento Hoteleiro desenvolvido para atender às necessidades específicas de hotéis, oferecendo controle eficiente sobre quartos alugados, reservas e operações do pessoal. Suas principais funcionalidades incluem o cadastro de quartos, controle em tempo real do status dos quartos e gerenciamento da rotina dos funcionários, com diferentes níveis de acesso para garantir eficiência operacional. Destaca-se também a segurança avançada, com senhas criptografadas e criação segura de novos usuários. O sistema utiliza tecnologias como banco de dados SQLite para armazenamento confiável, backend em Python e Flask para robustez e flexibilidade, e frontend com HTML e CSS para uma interface atraente e amigável.
             </div>
+        </div>
         </div>
     </main>
     <footer class="footer">
-        Feito por Marcus Vinícius
+        Copyright © 2023 by Marcus Vinícius. All rights reserved.
     </footer>
 </body>
 </html>
